Fix hello modal visibility

--- a/assets/less/modal.less
+++ b/assets/less/modal.less
@@ -106,7 +106,7 @@
 		.modal__title {
 			.roboto();
 			font-weight: @bold;
-			font-size: 16px;
+			font-size: 15px;
 			margin-bottom: 0;
 			margin-top: 10px;
 			line-height: 1;
@@ -119,6 +119,7 @@
 		.modal__description {
 			min-height: inherit;
 			margin-top: 0;
+			font-size: 13px;
 			line-height: 21px;
 		}
 		.btn {
